<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Alexandria</string>

    <!-- Menu Items -->
    <string name="books">List of Books</string>
    <string name="scan">Scan/Add a Book</string>
    <string name="about">About this App</string>

    <string name="navigation_drawer_open" >Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="scan_button">Scan</string>
    <string name="input_hint">Insert ISBN-13. Digits only.</string>
    <string name="book_cover">Bookcover</string>

    <string name="ok_button">Next</string>
    <string name="cancel_button">Cancel</string>
    <string name="not_found">Book not found</string>
    <string name="search">Search</string>
    <string name="delete">Delete Book</string>
    <string name="pref_startScreen">Select Startscreen</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="back_button">go back</string>
    <string name="share_text">A must read book:\ </string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="about_text">This application gets book information from a Google API. All titles, cover images, and author information come from there.
    The original version of this app was built by Sascha Jaschke, and a modified version is given to students in the Udacity Android Nanodegree program. </string>
    <string name="empty_booklist_text">No book information available</string>
    <string name="no_internet_text">You aren\'t connected to the network</string>
    <string name="pref_location_status">Status</string>
    <string name="empty_book_list_server_down">The server is not returning data.</string>
    <string name="empty_book_list_server_error">The server is not returning valid data. Please check for an updated version of Alexandria.</string>
    <string name="empty_book_list_no_network">You aren\'t connected to the network.</string>
    <string name="location_status_string_ok">OK</string>
    <string name="location_status_string_server_down">Server down</string>
    <string name="location_status_string_server_error">Server error</string>
    <string name="location_status_string_unknown">Unknown</string>
    <string name="book_not_found">Book not found</string>
    <string name="invalid_data">The server isn\'t returning valid data</string>
    <string name="server_down">The server is down</string>
    <string name="no_network">You aren\'t connected to the network</string>
    <string name="database_item_deleted">database item deleted</string>
    <string name="db_change">db change</string>
    <string name="empty_book_list_ok" />
</resources>
