<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.jaschke.alexandria.AddBook">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/eancontainer"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp" >

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:minEms="@integer/ean_width"
                    android:id="@+id/ean"
                    android:saveEnabled="true"
                    android:maxLength="@integer/ean_size"
                    android:maxLines="1"
                    android:hint="@string/input_hint"
                    android:paddingRight="20dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scan_button"
                    android:id="@+id/scan_button"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:orientation="vertical">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auto_focus"
                    android:id="@+id/auto_focus"
                    android:checked="true" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/use_flash"
                    android:id="@+id/use_flash"
                    android:checked="false" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="16dp">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/bookCover"
                        android:contentDescription="@string/book_cover"
                        android:scaleType="centerCrop" />
                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        style="?android:attr/progressBarStyleSmall"
                        android:id="@+id/bookCoverProgress" />
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bookTitle"
                    android:textSize="@dimen/head_line"
                    android:textIsSelectable="true"
                    android:textStyle="bold"
                    android:paddingRight="8dp" />
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bookSubTitle"
                android:layout_marginTop="8dp"
                android:maxLines="3"
                android:ellipsize="end" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/categories"
                    android:textSize="@dimen/small_fontsize"
                    android:layout_weight="1"
                    android:layout_marginTop="16dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/authors"
                    android:textSize="@dimen/small_fontsize"
                    android:layout_marginTop="16dp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_gravity="bottom"
            android:layout_height="wrap_content" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_button"
                android:layout_weight="1"
                android:id="@+id/delete_button"
                android:drawableLeft="@drawable/ic_action_discard"
                android:visibility="invisible"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok_button"
                android:visibility="invisible"
                android:layout_weight="1"
                android:id="@+id/save_button"
                android:drawableLeft="@drawable/ic_action_accept"
                android:layout_gravity="bottom"
                />

        </LinearLayout>
    </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:id="@+id/bookEmpty" />
        <ProgressBar
            android:id="@+id/addBookProgressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

</FrameLayout>
